--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <p>Header Logo</p>
+        <p class="logo">Header Logo</p>
         <nav>
-            <ul>
+            <ul class="header-links">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
@@ -18,51 +18,56 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="section-one">
             <article>
                 <h1>This Website is Awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign Up</button>
             </article>
-            <figure>
-                <div>this is a placeholder for an image</div>
-            </figure>
+            <div class="img-placeholder">this is a placeholder for an image</div>
         </section>
-        <section>
+        <section class="section-two">
             <h2>Some random information</h2>
             <div class="information-group">
-                <div>
+                <div class="information-element">
                     <div class="square"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div>
+                <div class="information-element">
                     <div class="square"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div>
+                <div class="information-element">
                     <div class="square"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div>
+                <div class="information-element">
                     <div class="square"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
         </section>
-        <section>
-            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="quote-author">-Thor, God of Thunder</p>
+        <section class="section-three">
+            <div class="quote-container">
+                <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="quote-author">-Thor, God of Thunder</p>
+            </div>
         </section>
-        <section>
+        <section class="section-four">
             <div class="call-to-action">
-                <p class="action-title">Call to action! It's time!</p>
-                <p class="action-message">Sign up for our product by clicking that button right over there!</p>
+                <div class="action-message">
+                    <p class="action-title">Call to action! It's time!</p>
+                    <p class="action-subtitle">Sign up for our product by clicking that button right over there!</p>
+                </div>
                 <button class="action-button">Sign Up</button>
             </div>
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; The OdinProject 2023</p>
+        <div class="footer-message">
+            <p>Copyright &copy; The OdinProject 2023</p>
+            <p>Made by Marc Frances</p>
+        </div>
     </footer>
 </body>
 </html>
